--- a/Find-and-replace.sketchplugin/Contents/Resources/_webpack_resources/ecf45a04271649312539228c3f2bd2a7.html
+++ b/Find-and-replace.sketchplugin/Contents/Resources/_webpack_resources/ecf45a04271649312539228c3f2bd2a7.html
@@ -12,6 +12,6 @@
   <script>
   
   </script>
-  <script src="../index.js"></script>
+  <script src="../__ressources_index.js"></script>
 </body>
 </html>
