--- a/ressources/index.html
+++ b/ressources/index.html
@@ -12,6 +12,6 @@
   <script>
   
   </script>
-  <script src="../index.js"></script>
+  <script src="../__ressources_index.js"></script>
 </body>
 </html>
